# mesos

./: CMakeLists.txt
cmake/: CompilationConfigure.cmake  MesosConfigure.cmake
src/master/: CMakeLists.txt
src/master/cmake/: MasterConfigure.cmake
